// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="c-range__hint is-rtl "
  data-garden-id="ranges.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="c-range__hint "
  data-garden-id="ranges.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders small styling if provided 1`] = `
<div
  className="c-range__hint c-range__hint--sm "
  data-garden-id="ranges.hint"
  data-garden-version="version"
/>
`;
